--- a/index.html
+++ b/index.html
@@ -128,6 +128,56 @@
                     </div>
                 </div>
                 <div class="carousel-item">
+                    <img class="third-slide" src="images/img4.png" alt="Third slide">
+                    <div class="container">
+                        <div class="carousel-caption relative">
+                            <!-- <span>All New Phones </span> -->
+                            <!-- <h1>up to 25% Flat Sale</h1> -->
+                            <!-- <p>It is a long established fact that a reader will be distracted by the readable content
+                                <br> of a page when looking at its layout. The point of using Lorem Ipsum is that</p>
+                            <a class="buynow" href="#">Buy Now</a>
+                            <ul class="social_icon">
+                                <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
+                                <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
+                            </ul> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="third-slide" src="images/img5.png" alt="Third slide">
+                    <div class="container">
+                        <div class="carousel-caption relative">
+                            <!-- <span>All New Phones </span> -->
+                            <!-- <h1>up to 25% Flat Sale</h1> -->
+                            <!-- <p>It is a long established fact that a reader will be distracted by the readable content
+                                <br> of a page when looking at its layout. The point of using Lorem Ipsum is that</p>
+                            <a class="buynow" href="#">Buy Now</a>
+                            <ul class="social_icon">
+                                <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
+                                <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
+                            </ul> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="third-slide" src="images/img6.png" alt="Third slide">
+                    <div class="container">
+                        <div class="carousel-caption relative">
+                            <!-- <span>All New Phones </span> -->
+                            <!-- <h1>up to 25% Flat Sale</h1> -->
+                            <!-- <p>It is a long established fact that a reader will be distracted by the readable content
+                                <br> of a page when looking at its layout. The point of using Lorem Ipsum is that</p>
+                            <a class="buynow" href="#">Buy Now</a>
+                            <ul class="social_icon">
+                                <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
+                                <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
+                            </ul> -->
+                        </div>
+                    </div>
+                <div class="carousel-item">
                     <img class="third-slide" src="images/img1.png" alt="Third slide">
                     <div class="container">
                         <div class="carousel-caption relative">
