--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </section>
     
 
-    <!-- <-- about --> -->
+    <!-- <-- about --> 
     <div class="about">
         <div class="container">
             <div class="row">
