--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                         <div class="full">
                             <div class="center-desk">
                                 <div class="logo">
-                                    <a href="index.html"><img src="images/logo.png" alt="#"></a>
+                                    <a href="index.html"><img src="images/Aurora .png" alt="#"></a>
                                 </div>
                             </div>
                         </div>
@@ -64,10 +64,10 @@
                                 <nav class="main-menu">
                                     <ul class="menu-area-main">
                                         <li class="active"> <a href="index.html">Home</a> </li>
-                                        <li> <a href="about.html">About</a> </li>
-                                        <li><a href="brand.html">Brand</a></li>
-                                        <li><a href="special.html">Specials</a></li>
-                                        <li><a href="contact.html">Contact Us</a></li>
+                                        <li> <a href="about.html">Our Project</a> </li>
+                                        <li><a href="brand.html">Our Team</a></li>
+                                         <!--<li><a href="special.html">Specials</a></li>
+                                        <li><a href="contact.html">Contact Us</a></li> -->
                                         <li class="last">
                                             <a href="#"><img src="images/search_icon.png" alt="icon" /></a>
                                         </li>
@@ -79,9 +79,9 @@
                     <div class="col-md-6 offset-md-6">
                         <div class="location_icon_bottum">
                             <ul>
-                                <li><img src="icon/call.png" />(+71)9876543109</li>
-                                <li><img src="icon/email.png" />demo@gmail.com</li>
-                                <li><img src="icon/loc.png" />Location</li>
+                                <li><img src="icon/call.png" />9353272203</li>
+                                <li><img src="icon/email.png" />project@sairamtap.edu.in</li>
+                                <li><img src="icon/loc.png" />Bengaluru</li>
                             </ul>
                         </div>
                     </div>
@@ -96,7 +96,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="titlepage">
-                        <h2>About</h2>
+                        <h2 style="text-align: center;">About Our Project</h2>
                     </div>
                 </div>
             </div>
@@ -109,26 +109,127 @@
             <div class="row">
                 <div class="col-xl-5 col-lg-5 col-md-5 co-sm-l2">
                     <div class="about_img">
-                        <figure><img src="images/about.png" alt="img" /></figure>
+                        <figure><img src="images/main-image.png" alt="img" /></figure>
                     </div>
                 </div>
                 <div class="col-xl-7 col-lg-7 col-md-7 co-sm-l2">
-                    <div class="about_box">
-                        <span>Our Mobile Shop</span>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of It is a long established fact that a reader will be distracted by the </p>
+                    <div class="about_box_">
+                        <span>How to make a solar tracking system using Arduino step by step</span>
+                        <p>Hello and welcome. In this project, you will see how to make a simple DIY solar tracking system using Arduino. Also, it moves through the dual axis. I used one servo motor and two LDR sensors for that. If you want, you can expand it up to four axes. </p>
 
                     </div>
                 </div>
                 <div class="col-xl-7 col-lg-7 col-md-7 co-sm-l2">
                     <div class="about_box_ ">
-                        <span>Our Mobile Shop</span>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of It is a long established fact that a reader will be distracted by the </p>
+                        <span>What is a solar tracking system and how does it work?</span>
+                        <p>These consist of three main parts. These are the single axis, dual-axis, and four-axis. Of these, dual-axis and single-axis are the main ones used. This method allows us to generate electricity through the sunlight at maximum efficiency. This is because the solar panel opens automatically toward sunlight. For that, the light-sensitive sensors are incorporated into these systems. </p>
 
                     </div>
                 </div>
                 <div class="col-xl-5 col-lg-5 col-md-5 co-sm-l2">
                     <div class="about_img">
-                        <figure><img src="images/about.png" alt="img" /></figure>
+                        <figure><img src="images/circuite.png" alt="img" /></figure>
+                    </div>
+                </div>
+                <div class="col-xl-7 col-lg-7 col-md-7 co-sm-l2">
+                    <div class="about_box_ ">
+                        <span>What we used?</span>
+                        <p>we also used two LDR sensors for this project. Usually, we can measure the light values using these sensors.The required components are given below.</p><br>
+                        <ol start="1">
+                            <li>Arduino UNO board</li>
+                            <li>Solar panel</li>
+                            <li>SG90 servo motor</li>
+                            <li>LDR sensor x 2</li>
+                            <li>10k resistor x 2</li>
+                            <li>Jumper wires</li>
+                            <li>Rigifoam / Foam board / Cardboard </li>
+                        </ol>
+
+                           
+                    </div>
+
+                </div>
+                <div class="col-xl-7 col-lg-7 col-md-7 co-sm-l2">
+                    <div class="about_box_">
+                        <span>Step 1</span>
+                        <p>Firstly, identify the components.</p>
+
+                    </div>
+                </div>
+                <div class="col-xl-7 col-lg-7 col-md-7 co-sm-l2">
+                    <div class="about_box">
+                        <span>Step 2</span>
+                        <p>Secondly, give connections as shown in image</p>
+
+                    </div>
+                </div>
+                <div class="col-xl-7 col-lg-7 col-md-7 co-sm-l2">
+                    <div class="about_box_">
+                        <span>Step 3</span>
+                        <p>
+                            Now, connect this project to your computer and upload the following program. It is as follows.
+                            <pre>
+
+/*Solar tracking system
+   https://srituhobby.com
+*/
+
+//Include the servo motor library
+#include <Servo.h>
+//Define the LDR sensor pins
+#define LDR1 A0
+#define LDR2 A1
+//Define the error value. You can change it as you like
+#define error 10
+//Starting point of the servo motor
+int Spoint =  90;
+//Create an object for the servo motor
+Servo servo;
+
+void setup() {
+//Include servo motor PWM pin
+  servo.attach(11);
+//Set the starting point of the servo
+  servo.write(Spoint);
+  delay(1000);
+}
+
+void loop() {
+//Get the LDR sensor value
+  int ldr1 = analogRead(LDR1);
+//Get the LDR sensor value
+  int ldr2 = analogRead(LDR2);
+
+//Get the difference of these values
+  int value1 = abs(ldr1 - ldr2);
+  int value2 = abs(ldr2 - ldr1);
+
+//Check these values using a IF condition
+  if ((value1 <= error) || (value2 <= error)) {
+
+  } else {
+    if (ldr1 > ldr2) {
+      Spoint = --Spoint;
+    }
+    if (ldr1 < ldr2) {
+      Spoint = ++Spoint;
+    }
+  }
+//Write values on the servo motor
+  servo.write(Spoint);
+  delay(80);
+}
+                            </pre>  
+                        </p>
+
+                    </div>
+                </div>
+                <div class="col-xl-7 col-lg-7 col-md-7 co-sm-l2">
+                    <div class="about_box_">
+                        <span style="color: blue !important;"
+                        ><a href="https://srituhobby.com/how-to-make-a-solar-tracking-system-using-arduino-step-by-step/#google_vignette">Click Here for step by step explanation </a></span>
+                        
+
                     </div>
                 </div>
             </div>
@@ -138,7 +239,7 @@
     <!-- end about -->
 
     <!-- footer -->
-    <footer>
+    <!-- <footer>
         <div id="contact" class="footer">
             <div class="container">
                 <div class="row pdn-top-30">
@@ -176,7 +277,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
     <!-- end footer -->
     <!-- Javascript files-->
     <script src="js/jquery.min.js"></script>
