--- a/brand.html
+++ b/brand.html
@@ -53,7 +53,7 @@
                         <div class="full">
                             <div class="center-desk">
                                 <div class="logo">
-                                    <a href="index.html"><img src="images/logo.png" alt="#"></a>
+                                    <a href="index.html"><img src="images/Aurora .png" alt="#"></a>
                                 </div>
                             </div>
                         </div>
@@ -64,10 +64,10 @@
                                 <nav class="main-menu">
                                     <ul class="menu-area-main">
                                         <li class="active"> <a href="index.html">Home</a> </li>
-                                        <li> <a href="about.html">About</a> </li>
-                                        <li><a href="brand.html">Brand</a></li>
-                                        <li><a href="special.html">Specials</a></li>
-                                        <li><a href="contact.html">Contact Us</a></li>
+                                        <li> <a href="about.html">Our Project</a> </li>
+                                        <li><a href="brand.html">Our Team</a></li>
+                                        <!-- <li><a href="special.html">Specials</a></li>
+                                        <li><a href="contact.html">Contact Us</a></li> -->
                                         <li class="last">
                                             <a href="#"><img src="images/search_icon.png" alt="icon" /></a>
                                         </li>
@@ -78,11 +78,11 @@
                     </div>
                     <div class="col-md-6 offset-md-6">
                         <div class="location_icon_bottum">
-                            <ul>
+                            <!-- <ul>
                                 <li><img src="icon/call.png" />(+71)9876543109</li>
                                 <li><img src="icon/email.png" />demo@gmail.com</li>
                                 <li><img src="icon/loc.png" />Location</li>
-                            </ul>
+                            </ul> -->
                         </div>
                     </div>
                 </div>
@@ -96,15 +96,34 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="titlepage">
-                        <h2>Our Brand</h2>
+                        <h2>Our Team:</h2><br>
+                        <div class="col-xl-7 col-lg-7 col-md-7 co-sm-l2">
+                            <div class="about_box">
+                                <span><ol start="1">
+                                    <li>Chandan</li>
+                                    <li>Yashwanth</li>
+                                    <li>Manu</li>
+                                    <li>Bharath</li>
+                                    <li>Kavya</li>
+                                    <li>Keerthi</li>
+                                    <li>Rakshitha</li>
+                                    <li>Anu</li>
+                                    <li>Pradeep</li>
+                                    <li>Basavraj</li>
+                                    <li>Gopal</li>
+                                </ol></span>
+                                <p></p>
+        
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- brand -->
-    <div class="brand">
+
+    <!-- <div class="brand">
         <div class="container">
 
         </div>
@@ -183,12 +202,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- end brand -->
 
     <!-- footer -->
-    <footer>
+    <!-- <footer>
         <div id="contact" class="footer">
             <div class="container">
                 <div class="row pdn-top-30">
@@ -226,7 +245,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
     <!-- end footer -->
     <!-- Javascript files-->
     <script src="js/jquery.min.js"></script>
