--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                                 <nav class="main-menu">
                                     <ul class="menu-area-main">
                                         <li class="active"> <a href="index.html">Home</a> </li>
-                                        <!-- <li> <a href="about.html">About</a> </li>
-                                        <li><a href="brand.html">Brand</a></li>
-                                        <li><a href="special.html">Specials</a></li>
+                                        <li> <a href="about.html">Our Project</a> </li>
+                                        <li><a href="brand.html">Our Team</a></li>
+                                        <!--<li><a href="special.html">Specials</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                         <li class="last"> -->
                                             <a href="#"><img src="images/search_icon.png" alt="icon" /></a>
@@ -111,8 +111,8 @@
                         </div>
                     </div>
                 </div>
-                 <div class="carousel-item"> 
-                    <img class="second-slide" src="images/img2.png" alt="Second slide">
+                <div class="carousel-item"> 
+                    <img class="second-slide" src="images/img3.png" alt="Second slide">
                     <div class="container">
                         <div class="carousel-caption relative">
                             <!-- <span>Image </span>
@@ -144,11 +144,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item">
+                <!-- <div class="carousel-item">
                     <img class="third-slide" src="images/img5.png" alt="Third slide">
                     <div class="container">
                         <div class="carousel-caption relative">
-                            <!-- <span>All New Phones </span> -->
+                             <span>All New Phones </span> -->
                             <!-- <h1>up to 25% Flat Sale</h1> -->
                             <!-- <p>It is a long established fact that a reader will be distracted by the readable content
                                 <br> of a page when looking at its layout. The point of using Lorem Ipsum is that</p>
@@ -158,13 +158,13 @@
                                 <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
                                 <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
                             </ul> -->
-                        </div>
+                        <!-- </div>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img class="third-slide" src="images/img6.png" alt="Third slide">
                     <div class="container">
-                        <div class="carousel-caption relative">
+                        <div class="carousel-caption relative"> -->
                             <!-- <span>All New Phones </span> -->
                             <!-- <h1>up to 25% Flat Sale</h1> -->
                             <!-- <p>It is a long established fact that a reader will be distracted by the readable content
@@ -175,12 +175,12 @@
                                 <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
                                 <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
                             </ul> -->
-                        </div>
+                        <!-- </div>
                     </div>
                 <div class="carousel-item">
                     <img class="third-slide" src="images/img1.png" alt="Third slide">
                     <div class="container">
-                        <div class="carousel-caption relative">
+                        <div class="carousel-caption relative"> -->
                             <!-- <span>All New Phones </span> -->
                             <!-- <h1>up to 25% Flat Sale</h1> -->
                             <!-- <p>It is a long established fact that a reader will be distracted by the readable content
@@ -191,13 +191,13 @@
                                 <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
                                 <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
                             </ul> -->
-                        </div>
+                        <!-- </div>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img class="third-slide" src="images/img3.png" alt="Third slide">
                     <div class="container">
-                        <div class="carousel-caption relative">
+                        <div class="carousel-caption relative"> -->
                             <!-- <span>All New Phones </span> -->
                             <!-- <h1>up to 25% Flat Sale</h1> -->
                             <!-- <p>It is a long established fact that a reader will be distracted by the readable content
@@ -208,9 +208,9 @@
                                 <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
                                 <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
                             </ul> -->
-                        </div>
+                        <!-- </div>
                     </div>
-                </div>
+                </div>  -->
             </div>
             <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
                 <i class='fa fa-angle-left'></i>
@@ -228,7 +228,7 @@
             <div class="row">
                 <div class="col-xl-5 col-lg-5 col-md-5 co-sm-l2">
                     <div class="about_img">
-                        <figure><img src="images/R.png" alt="img" /></figure>
+                        <figure><a href="about.html"><img src="images/main-image.png" alt="img" /></a></figure>
                     </div>
                 </div>
                 <div class="col-xl-7 col-lg-7 col-md-7 co-sm-l2">
@@ -419,7 +419,7 @@
     </div>
     <!-- end clients -->
     <!-- contact -->
-    <div class="contact">
+    <!-- <div class="contact">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -448,7 +448,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- end contact -->
 
     <!-- footer -->
